# dtcc-core

./: .clang-format  .gitignore  BOUNDARY_DEMO_README.md  BOUNDARY_HANDLING_EXPLAINED.md  BOUNDARY_SNAP_IMPLEMENTATION.md  CMakeLists.txt  COMPLETION_CHECKLIST.md  DEMO_BOUNDARY_SUMMARY.md  DUPLICATE_FACE_REMOVAL_IMPLEMENTATION.md  DUPLICATE_REMOVAL_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  MEMORY_ARCHITECTURE_EXPLAINED.md  MEMORY_VISUALIZATION.txt  MISSING_DOCSTRINGS.md  MPI_SCALABILITY_ANALYSIS.md  Makefile  README.md  ROBUST_DUPLICATE_REMOVAL_ANALYSIS.md  SHARED_MEMORY_MESH_BUILDING.md  demo_boundary_tiled.vtu  install.sh  pyproject.toml
dtcc_core/: CMakeLists.txt  __init__.py  logging.py
dtcc_core/builder/: _PointCloud.py  __init__.py  _meshing.py  builders.py  city_methods.py  logging.py  model.py  model_conversion.py  register.py
dtcc_core/builder/building/: modify.py
dtcc_core/builder/city/: __init__.py  build.py  modify.py
dtcc_core/builder/geometry/: __init__.py  multisurface.py  surface.py
dtcc_core/builder/geometry/create/: mesh.py
dtcc_core/builder/geometry_builders/: buildings.py  meshes.py  terrain.py
dtcc_core/builder/meshing/: __init__.py  convert.py  extrude_surface_mesh.py  mesh_tiler.py  meshing.py  shared_memory_backend.py  tetgen.py  tetgen_utils.py  tile_mesh.py  tiled_mesh_builder.py
dtcc_core/builder/pointcloud/: convert.py  filter.py
dtcc_core/builder/polygons/: polygons.py  surface.py
dtcc_core/builder/raster/: __init__.py  analyse.py  burn.py  convert.py  filter.py  interpolation.py  stats.py
dtcc_core/builder/roadnetwork/: convert.py
dtcc_core/builder/surface/: modify.py
dtcc_core/builder/trees/: create.py  utils.py
dtcc_core/common/: __init__.py  dtcc_logging.py  handler.py  progress.py
dtcc_core/cpp/: dtcc_builder.cpp
dtcc_core/cpp/include/: BoundaryConditions.h  BoundaryConditionsElastic.h  BuildingProcessor.h  CityBuilder.h  DisjointSet.h  Geometry.h  Logging.h  MeshBuilder.h  MeshProcessor.h  MeshQualityMetrics.h  PointCloudProcessor.h  Smoother.h  Triangulate.h  VertexSmoother.h  VolumeMeshBuilder copy.h  VolumeMeshBuilder.h
dtcc_core/cpp/include/fem/: Assembler.h  BilinearForm.h  Elasticity.h  LinearSolver.h  MatrixMarket.h  Poisson.h  SparseMatrix.h
dtcc_core/cpp/include/fem/forms/: _Elasticity.h
dtcc_core/cpp/include/meshing/: BuilderMesh.h  ColumnMeshProcessing.h  DomainPadding.h  LayerHeights.h  MeshImprovement.h  MeshLogging.h  VolumeMeshRefinement.h
dtcc_core/cpp/include/model/: Building.h  ColumnMesh.h  ColumnarVolumeMesh.h  Grid.h  GridField.h  Mesh.h  Vector.h
dtcc_core/cpp/include/spade/: triangulate.hpp
dtcc_core/datasets/: README.md  __init__.py  air_quality.py  airquality.py  buildings.py  city_flat_mesh.py  city_surface_mesh.py  city_volume_mesh.py  dataset.py  hydrology.py  ocean.py  pointcloud.py  registry.py  terrain.py  terrain_surface_mesh.py  trees.py  volumemesh.py  weather.py
dtcc_core/dtcc_builder/: __init__.py  _meshing.py  builders.py  city_methods.py  logging.py  model.py  register.py
dtcc_core/dtcc_builder/building/: modify.py
dtcc_core/dtcc_builder/city/: modify.py
dtcc_core/dtcc_builder/geometry/: multisurface.py  surface.py
dtcc_core/dtcc_builder/geometry_builders/: buildings.py  meshes.py  surface.py  terrain.py
dtcc_core/dtcc_builder/meshing/: convert.py  meshing.py
dtcc_core/dtcc_builder/pointcloud/: convert.py  filter.py
dtcc_core/dtcc_builder/polygons/: polygons.py  surface.py
dtcc_core/dtcc_builder/raster/: analyse.py  burn.py  convert.py  interpolation.py  stats.py
dtcc_core/dtcc_builder/roadnetwork/: convert.py
dtcc_core/dtcc_common/: dtcc_logging.py
dtcc_core/dtcc_io/: __init__.py  city.py  footprints.py  info.py  landuse.py  logging.py  meshes.py  old_landuse.py  old_roadnetwork.py  pointcloud.py  raster.py  roadnetwork.py
dtcc_core/dtcc_io/cityjson/: cityjson.py  utils.py
dtcc_core/dtcc_io/mesh_old/: mesh.py  utils.py
dtcc_core/dtcc_model/: logging.py
dtcc_core/dtcc_model/geometry/: bounds.py  geometry.py  grid.py  linestring.py  mesh.py  pointcloud.py  surface.py  transform.py
dtcc_core/dtcc_model/object/: building.py  city.py  landuse.py  object.py  roadnetwork.py  terrain.py
dtcc_core/dtcc_model/values/: field.py  raster.py
dtcc_core/io/: __init__.py  city.py  footprints.py  generic.py  landuse.py  logging.py  meshes.py  pointcloud.py  raster.py  roadnetwork.py  trees.py  utils.py  vector_utils.py  xdmf.py
dtcc_core/io/city_methods/: __init__.py
dtcc_core/io/cityjson/: cityjson.py  converters.py  utils.py  write_cityjson.py
dtcc_core/io/container/: pointcloud_container.py
dtcc_core/io/data/: __init__.py  cache.py  lidar.py  logging.py  overpass.py  wrapper.py
dtcc_core/io/mesh_old/: meshio_loaders.py  pygltflib_loaders.py
dtcc_core/model/: __init__.py  dtcc_pb2.py  dtcc_test_pb2.py  model.py  utils.py
dtcc_core/model/city_mixins/: builder_mixin.py  io_mixins.py
dtcc_core/model/geometry/: __init__.py  bounds.py  geometry.py  grid.py  linestring.py  mesh.py  point.py  pointcloud.py  polygon.py  surface.py  transform.py
dtcc_core/model/mixins/city/: __init__.py  builder_mixin.py  io_mixins.py  modify_mixins.py
dtcc_core/model/mixins/mesh/: mixins.py  quality.py
dtcc_core/model/mixins/pointcloud/: __init__.py  mixins.py
dtcc_core/model/object/: __init__.py  building.py  city.py  landuse.py  object.py  roadnetwork.py  sensor_collection.py  tree.py
dtcc_core/model/values/: __init__.py  field.py  raster.py
dtcc_core/proto/: dtcc.proto  dtcc_test.proto
dtcc_core/reproject/: __init__.py  reproject.py
sandbox/: DEMOS_SUMMARY.txt  DEMO_COMPARISON.md  README_TILING_DEMOS.md  airquality_snapshot.py  city_download.py  demo_boundary_notiled.vtu  demo_boundary_single_building.py  demo_boundary_tiled.vtu  demo_tiling_parallel.py  demo_tiling_serial.py  mesh_primitives.py  mesh_quality_survey.py  mesh_snapping.py  meshers-features.md  meshing.py  spade_build_surface_mesh.py  spade_build_terrain_mesh.py  trees_demo.py  trees_from_las.py  write_cityjson.py
scripts/: build_proto  build_proto.sh  (+2 more)
(+85 files in other folders)
